# text2sql-agent

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md  PLAN.md
src/text2sql_agent/: config.py  main.py
src/text2sql_agent/llm/: __init__.py  provider.py
src/text2sql_agent/llm/prompts/: __init__.py  classification.py
src/text2sql_agent/mcp_client/: __init__.py  base.py  factory.py  models.py  postgresql_client.py
tests/manual/: test_agent_health_smoke.py  test_mcp_smoke.py
tests/unit/: test_llm_provider.py  test_mcp_client.py
