[project]
name = "text2sql-agent"
version = "0.1.0"
description = "Text2SQL agent that converts natural language questions into PostgreSQL queries"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.0",
    "uvicorn>=0.41.0",
    "langgraph>=1.0.10",
    "langchain-core>=1.2.15",
    "langchain-openai>=1.1.10",
    "langsmith>=0.7.6",
    "chromadb>=0.5.0",
    "httpx>=0.28.0",
    "httpx-sse>=0.4.3",
    "pydantic-settings>=2.13.0",
    "pyyaml>=6.0.3",
    "fastmcp>=2.10.1",
    "tenacity>=9.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=5.0",
    "ruff>=0.6.0",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/text2sql_agent"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
